kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: cloudforge

  labels:
    name: cloudforge
    app: cloudforge-devops-platform
    environment: production
    managed-by: kubectl

  annotations:
    description: "Namespace for CloudForge DevOps Platform"
    owner: "Abhishek Shrivastava"
